[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="PanelContainer" parent="CanvasLayer"]
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.6
margin_right = -5.40002
margin_bottom = -26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 192.4
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/CenterContainer"]
margin_left = 51.0
margin_top = 6.0
margin_right = 134.0
margin_bottom = 74.0

[node name="StartGame" type="Button" parent="CanvasLayer/Panel/CenterContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 20.0
text = "Start Game"

[node name="Help" type="Button" parent="CanvasLayer/Panel/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
text = "Help"

[node name="Quit" type="Button" parent="CanvasLayer/Panel/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
text = "Quit"

[connection signal="pressed" from="CanvasLayer/Panel/CenterContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/CenterContainer/VBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/CenterContainer/VBoxContainer/Quit" to="." method="_on_QuitGame_pressed"]
